--- a/index.html
+++ b/index.html
@@ -2,6 +2,26 @@
 <html lang="ru">
 
 <head>
+    <meta name="yandex-verification" content="ff0f1b1450b6ce92" />
+    <!-- Google Tag Manager -->
+    <script>
+        (function(w, d, s, l, i) {
+            w[l] = w[l] || [];
+            w[l].push({
+                'gtm.start': new Date().getTime(),
+                event: 'gtm.js'
+            });
+            var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s),
+                dl = l != 'dataLayer' ? '&l=' + l : '';
+            j.async = true;
+            j.src =
+                'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+            f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-K3FB4QT');
+    </script>
+    <!-- End Google Tag Manager -->
+
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:image" content="/img/social.png">
@@ -35,6 +55,10 @@
 </head>
 
 <body class="new">
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K3FB4QT"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <header class="affix-top">
         <div class="container inthemiddle">
             <div class="brand hidden-xs col-sm-5 col-md-3 col-lg-3">
@@ -80,7 +104,7 @@
                 <div class="row money24">
                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 mobile-center text-center">
                         <!--p class="text-center">Мы перезвоним вам через 5 минут и подробно проконсультируем</p-->
-                        <form enctype="multipart/form-data" method="post" id="feedback-form" class="text-center">
+                        <form enctype="multipart/form-data" method="post" id="feedback-form" class="text-center" onsubmit="yaCounter48446306.reachGoal('CLICK_CALC')">
                             <!--h3 class="text-center">Расчитать выплату</h3-->
                             <p class="text-center"><strong>Загрузите фото и узнайте сумму через 15 минут</strong></p>
                             <!--label for="nameFF">Имя:</label-->
@@ -259,7 +283,7 @@
                     </wrapper>
                     <script>
                         $('.carousel').carousel({
-                            interval: 6000
+                            interval: 5000
                         })
                     </script>
                 </div>
@@ -274,17 +298,17 @@
                     <div class="title-line"></div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 thumb">
+                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 thumb">
                         <a data-fancybox="gallery" href="src/sert1.jpg">
                             <img class="img-responsive" src="src/sert1.jpg" alt="">
                         </a>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 thumb">
+                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 thumb">
                         <a data-fancybox="gallery" href="src/sert2.jpg">
                             <img class="img-responsive" src="src/sert2.jpg" alt="">
                         </a>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 thumb">
+                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 thumb">
                         <a data-fancybox="gallery" href="src/sert3.jpg">
                             <img class="img-responsive" src="src/sert3.jpg" alt="">
                         </a>
@@ -374,7 +398,7 @@
                 <div class="modal-body"><iframe name="fff" style="opacity:0;width:0;height:0;float:right;position:absolute;" src="saved_resource.html"></iframe>
                     <iframe name="ggg" style="opacity:0;width:0;height:0;float:right;position:absolute;" src="saved_resource(1).html"></iframe>
                     <div class="answer"></div>
-                    <form target="fff" class="form" action="send_email.php" method="post" enctype="multipart/form-data" onsubmit="">
+                    <form target="fff" class="form" action="send_email.php" method="post" enctype="multipart/form-data" onsubmit="yaCounter48446306.reachGoal('CLICK_CALL_BACK')">
                         <input type="hidden" name="action" value="form/view">
                         <input type="hidden" name="site_id" value="86">
                         <input type="hidden" name="lang" value="rus">
@@ -388,7 +412,6 @@
             </div>
         </div>
     </div>
-
 
 </body>
 
